--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta charset="utf-8" />
-	<title>Andis Multimap Version 150707-1555</title>
+	<title>Andis Multimap Version 150717-1522</title>
 	<!-- style="-moz-user-select: none;" -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
@@ -10,26 +10,29 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="favicon.png"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	<!-- Leaflet -->
+	<!-- Leaflet 
+	<link rel="stylesheet" href="leaflet-1.0b/leaflet.css" />
+	<script src="leaflet-1.0b/leaflet.js"></script>
+	-->
 	<link rel="stylesheet" href="./leaflet-0.7.3/leaflet.css" />
 	<script src="./leaflet-0.7.3/leaflet.js"></script>
 	<!-- Leaflet-Plugins -->
-	<link rel="stylesheet" href="./styledLayerControl.css" />
-	<link rel="stylesheet" href="./leaflet-search.css" />
-	<link rel="stylesheet" href="./leaflet-0.7.3/L.Grid.css" />
-	<link rel="stylesheet" href="./leaflet-0.7.3/L.Control.Marker.css" />
-	<link rel="stylesheet" href="./minimap/Control.MiniMap.css" />
-    <link rel="stylesheet" href="./L.Control.Zoomslider.css" />
-	<link rel="stylesheet" href="./L.Control.Locate.css" />
-	<script src="./styledLayerControl.js"></script>
-	<script src="./leaflet-search.js"></script>
-	<script src="./leaflet-0.7.3/L.Grid.js"></script>
-	<script src="./leaflet-0.7.3/L.Control.Marker.js"></script>
-	<script src="./minimap/Control.MiniMap.js" type="text/javascript"></script>
-    <script src="./L.Control.Zoomslider.js" ></script>
-	<script src="./L.Control.Locate.js"></script>
+	<link rel="stylesheet" href="lib/styledLayerControl.css" />
+	<link rel="stylesheet" href="lib/leaflet-search.css" />
+	<link rel="stylesheet" href="lib/L.Grid.css" />
+	<link rel="stylesheet" href="lib/L.Control.Marker.css" />
+	<link rel="stylesheet" href="lib/Control.MiniMap.css" />
+    <link rel="stylesheet" href="lib/L.Control.Zoomslider.css" />
+	<link rel="stylesheet" href="lib/L.Control.Locate.css" />
+	<script src="lib/styledLayerControl.js"></script>
+	<script src="lib/leaflet-search.js"></script>
+	<script src="lib/L.Grid.js"></script>
+	<script src="lib/L.Control.Marker.js"></script>
+	<script src="lib/Control.MiniMap.js" type="text/javascript"></script>
+    <script src="lib/L.Control.Zoomslider.js" ></script>
+	<script src="lib/L.Control.Locate.js"></script>
 	<!-- other plugins -->
-	<script src="./leaflet-google.js"></script>
+	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 	<!--
 	<link rel="stylesheet" href="../src/leaflet.groupedlayercontrol.css" />
@@ -136,11 +139,11 @@
 		}
 
 		/* check if coordinates are valid numbers; if not zoom to Europe default */
-		function isValid(p) {
-			if(isNaN(p[0]) || (parseFloat(p[0]) != parseInt(p[0])) || isNaN(p[1]) || isNaN(p[2])) {
+		function isValid(p) { //(parseFloat(p[0]) != parseInt(p[0])) ||
+			if(isNaN(p[0]) || isNaN(p[1]) || isNaN(p[2])) {
 				window.location.replace("");
 				map.setView(new L.LatLng(46, 16), 5);
-				//alert("invalid coordinates");
+				alert("invalid coordinates");
 				return false;
 			} else {
 				return true;
@@ -234,10 +237,10 @@
 		var nokiaKey="?app_id=xWVIueSv6JL0aJ5xqTxb&app_code=djPZyynKsbTjIUDOBcHZ2g&lg=eng&ppi=72";
 		layerNokia = new L.TileLayer("http://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=g7UuRR708Tsut4YSnDLy&token=fVzaDAdRK62zo3CuNcPtDg&lg=ENG",{ 
 			maxZoom: maxzoom_std,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
-		//https://2.aerial.maps.api.here.com/maptile/2.1/maptile/eba0d2d4ef/hybrid.day/15/17875/11363/512/png8?app_id=xWVIueSv6JL0aJ5xqTxb&app_code=djPZyynKsbTjIUDOBcHZ2g&lg=ger&ppi=72
-		layerNokiaSat = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/eba0d2d4ef/satellite.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
+		//https://4.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/hybrid.day/15/17870/11362/512/png8?app_id=xWVIueSv6JL0aJ5xqTxb&app_code=djPZyynKsbTjIUDOBcHZ2g&lg=ger&ppi=72
+		layerNokiaSat = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/satellite.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
 			maxZoom: maxzoom_g_sat,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
-		layerNokiaHybrid = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/eba0d2d4ef/hybrid.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
+		layerNokiaHybrid = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/hybrid.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
 			maxZoom: maxzoom_g_sat,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
 		layerNokiaLabel = new L.TileLayer("http://{s}.base.maps.api.here.com/maptile/2.1/streettile/newest/normal.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
 		maxZoom: maxzoom_std,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
@@ -253,8 +256,8 @@
 		
 		
 		//stemen watercolor
-		//layerStamenWaterc = new L.TileLayer("http://tile.stamen.com/watercolor/{z}/{x}/{y}.jpg",{ 
-		//	maxZoom: maxzoom_std,detectRetina: true, format: 'image/jpg', attribution: 'Kartendaten: © Stamen'});
+		layerStamenWaterc = new L.TileLayer("http://tile.stamen.com/watercolor/{z}/{x}/{y}.jpg",{ 
+			maxZoom: maxzoom_std,detectRetina: true, format: 'image/jpg', attribution: 'Kartendaten: © Stamen'});
 		
 		// open piste map (opacity: 0.5,)
 		var layerOpPisteMapLandsh = new L.TileLayer("http://tiles{s}.openpistemap.org/landshaded/{z}/{x}/{y}.png",
@@ -294,6 +297,8 @@
 		var layerMapSurfer = new L.TileLayer(layerAdrMapSurfer,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		var layerMapSurferHillOvl = new L.TileLayer("http://korona.geog.uni-heidelberg.de/tiles/asterh/x={x}&y={y}&z={z}",{maxZoom: maxzoom_osm,detectRetina: true, transparent: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		var layerMapSurferAdminOvl = new L.TileLayer("http://korona.geog.uni-heidelberg.de/tiles/adminb/x={x}&y={y}&z={z}",{maxZoom: maxzoom_osm,detectRetina: true, transparent: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
+		var layerAdrMapSurferOvl="http://korona.geog.uni-heidelberg.de/tiles/hybrid/x={x}&y={y}&z={z}"
+		var layerMapSurferOvl = new L.TileLayer(layerAdrMapSurferOvl,{maxZoom: maxzoom_osm,detectRetina: true, transparent: true, attribution: 'Kartendaten: © <a href="http://mapsurfernet.com/">Mapsurfer</a>'});
 		
 		var layerAdrMapbox = "https://{s}.tiles.mapbox.com/v3/examples.map-i86l3621/{z}/{x}/{y}.png";
 		var layerMapBox = new L.TileLayer(layerAdrMapbox,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
@@ -302,12 +307,12 @@
 		//var layerCloudmade = new L.TileLayer("http://tile.cloudmade.com/8bafab36916b5ce6b4395ede3cb9ddea/1/256/{z}/{x}/{y}",{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © Cloudmade'});
 		
 		//lokale tiles
-		var layerOsmLocal = new L.TileLayer("../tiles/{z}/{x}/{y}.png",
-		{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
-		var layerOsmLocalOutdoor = new L.TileLayer("../tiles2/{z}/{x}/{y}.png",
-		{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
-		var layerOsmLocalCycle = new L.TileLayer("../tiles3/{z}/{x}/{y}.png",
-		{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
+		//var layerOsmLocal = new L.TileLayer("../tiles/{z}/{x}/{y}.png",
+		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
+		//var layerOsmLocalOutdoor = new L.TileLayer("../tiles2/{z}/{x}/{y}.png",
+		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
+		//var layerOsmLocalCycle = new L.TileLayer("../tiles3/{z}/{x}/{y}.png",
+		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
 		
 		//http://b.tiles.telegeography.com/maps/submarine-cable-map-2015/5/13/14.png
 		//var layerSubmCableUrl="http://{s}.tiles.telegeography.com/maps/submarine-cable-map-2015/{z}/{x}/{y}.png";
@@ -368,6 +373,7 @@
 					"OpenStreetMap Cycle": layerOSMCycle,
 					"ÖPNV Verkehrskarte": layerÖPNV,
 					"Esri light gray": layerEsriGray,
+					"Stamen Watercolor": layerStamenWaterc,
 				}
 			},
 			{groupName : "Satellit",
@@ -402,6 +408,7 @@
 					//"Esri Boundaries": layerEsriBoundOvl,
 					//"Esri World Reference": layerEsriWldRefOvl,
 					"Basemap.at Beschriftungen": layerBasemOvl,
+					"Mapsurfer Overlay": layerMapSurferOvl,
 					"Mapsurfer Admin": layerMapSurferAdminOvl,
 					"Mapsurfer Hillshade": layerMapSurferHillOvl,
 					"OSM Terrain": layerOpPisteMapLandsh,
