--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta charset="utf-8" />
-	<title>Andis Multimap Version 150717-1522</title>
+	<title>Andis Multimap Version 150914-0920</title>
 	<!-- style="-moz-user-select: none;" -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
@@ -34,10 +34,13 @@
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+	<script src="lib/layer/tile/Bing.js"></script>
 	<!--
+	<script src="lib/TileLayer.Bing.js"></script>
+	<script src="lib/leaflet-compass.min.js"></script>
+	<link rel="stylesheet" href="lib/leaflet-compass.min.css" />
 	<link rel="stylesheet" href="../src/leaflet.groupedlayercontrol.css" />
 	<script src="../src/leaflet.groupedlayercontrol.js"></script>
-	<script src="./Bing.js"></script>
 	<script src="./google-api.js"></script>
 	<script src="L.Control.Locate.js"></script>
 	<link rel="stylesheet" href="L.Control.Locate.css" />
@@ -188,7 +191,10 @@
 		var layerBasem = new L.TileLayer(layerAdrBasem,{ maxZoom: maxzoom_std, bounds: boundsAUT, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © <a href="http://www.basemap.at">Basemap.at<a/>'});
 		var layerAdrBasemOvl="http://maps{s}.wien.gv.at/basemap/bmapoverlay/normal/google3857/{z}/{y}/{x}.png"
 		var layerBasemOvl = new L.TileLayer(layerAdrBasemOvl,{ maxZoom: maxzoom_std, bounds: boundsAUT, detectRetina: true, transparent: true, format: 'image/png', subdomains: '1234', attribution: 'Kartendaten: © <a href="http://www.basemap.at">Basemap.at<a/>'});
-		
+
+		var layerAdrBasemOrtho = "http://maps{s}.wien.gv.at/basemap/bmaporthofoto30cm/normal/google3857/{z}/{y}/{x}.jpeg";
+		var layerBasemOrtho = new L.TileLayer(layerAdrBasemOrtho,{ maxZoom: maxzoom_osm, bounds: boundsAUT, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © <a href="http://www.basemap.at">Basemap.at<a/>'});
+
 		//Esri - Arcgis online
 		var layerAdrEsriTopo="http://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/{z}/{y}/{x}"
 		var layerEsriTopo = new L.TileLayer(layerAdrEsriTopo,{ maxZoom: maxzoom_osm, attribution: 'Kartendaten: © ArGIS Online'});
@@ -211,20 +217,21 @@
 		var g_hybrid   = new L.Google('HYBRID', {maxZoom: maxzoom_g_sat,attribution: 'Kartendaten: © Google'});
 		var g_terrain   = new L.Google('TERRAIN',{maxZoom: maxzoom_topo,attribution: 'Kartendaten: © Google'});
 		
-		// Bing layers
-		//var bing1 = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'Aerial'});
-		//var bing2 = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'Road'});
-		
 		//apple layers
-		
 		layerAdrAppleStd="https://cdn{s}.apple-mapkit.com/tp/tile?type=tile&style=0&size=1&x={x}&y={y}&z={z}&scale=1&lang=de-DE&imageFormat=jpg&vendorkey=546bccd01bb595c1ae74836bf94b56735aa7f907"
 		layerAppleStd = new L.TileLayer(layerAdrAppleStd,{ maxZoom: maxzoom_std, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
 		layerAdrAppleSat="https://sat-cdn{s}.apple-mapkit.com/tile?style=7&size=1&scale=1&z={z}&x={x}&y={y}&vendorkey=546bccd01bb595c1ae74836bf94b56735aa7f907&v=203"
 		layerAppleSat = new L.TileLayer(layerAdrAppleSat,{ maxZoom: maxzoom_g_sat, detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
 		layerAdrAppleOverlay="https://cdn{s}.apple-mapkit.com/tp/tile?type=tile&style=46&size=1&x={x}&y={y}&z={z}&scale=1&lang=de-DE&imageFormat=png&vendorkey=546bccd01bb595c1ae74836bf94b56735aa7f907"
 		layerAppleOverlay = new L.TileLayer(layerAdrAppleOverlay,{ maxZoom: maxzoom_g_sat,detectRetina: true, 	transparent: true, format: 'image/png', subdomains: '1234', attribution: 'Kartendaten: © Apple Inc.'});
-		
-		
+
+		// Bing layers
+		var bing_areal = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'Aerial',maxZoom: maxzoom_std});
+		var bing_areal_label = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'AerialWithLabels',maxZoom: maxzoom_std});
+//		var bing_birdseye = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'Birdview',maxZoom: maxzoom_std});
+		var bing_road = new L.BingLayer("AvZ2Z8Jve41V_bnPTe2mw4Xi8YWTyj2eT87tSGSsezrYWiyaj0ldMaVdkyf8aik6", {type: 'Road',maxZoom: maxzoom_std});
+
+
 		//ÖPNV "http://tile.memomaps.de/tilegen/14/8575/5624.png"
 		layerÖPNV = new L.TileLayer("http://tile.memomaps.de/tilegen/{z}/{x}/{y}.png",{ 
 			maxZoom: maxzoom_std,detectRetina: true, attribution: 'Kartendaten: © ÖPNV'});
@@ -233,14 +240,14 @@
 		layerGeofTopo = new L.TileLayer("http://{s}.tile.geofabrik.de/15173cf79060ee4a66573954f6017ab0/{z}/{x}/{y}.png",{ 
 			maxZoom: maxzoom_std,detectRetina: true, attribution: 'Kartendaten: © Geofabrik'});
 		
-		//Nokia here-maps 
+		//Nokia here-maps
 		var nokiaKey="?app_id=xWVIueSv6JL0aJ5xqTxb&app_code=djPZyynKsbTjIUDOBcHZ2g&lg=eng&ppi=72";
-		layerNokia = new L.TileLayer("http://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=g7UuRR708Tsut4YSnDLy&token=fVzaDAdRK62zo3CuNcPtDg&lg=ENG",{ 
+		layerNokia = new L.TileLayer("http://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=g7UuRR708Tsut4YSnDLy&token=fVzaDAdRK62zo3CuNcPtDg&lg=ENG",{
 			maxZoom: maxzoom_std,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
 		//https://4.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/hybrid.day/15/17870/11362/512/png8?app_id=xWVIueSv6JL0aJ5xqTxb&app_code=djPZyynKsbTjIUDOBcHZ2g&lg=ger&ppi=72
-		layerNokiaSat = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/satellite.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
+		layerNokiaSat = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/satellite.day/{z}/{x}/{y}/256/png8" + nokiaKey,{
 			maxZoom: maxzoom_g_sat,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
-		layerNokiaHybrid = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/2c752007f4/hybrid.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
+		layerNokiaHybrid = new L.TileLayer("http://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/hybrid.day/{z}/{x}/{y}/256/png8" + nokiaKey,{
 			maxZoom: maxzoom_g_sat,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
 		layerNokiaLabel = new L.TileLayer("http://{s}.base.maps.api.here.com/maptile/2.1/streettile/newest/normal.day/{z}/{x}/{y}/256/png8" + nokiaKey,{ 
 		maxZoom: maxzoom_std,detectRetina: true, subdomains: '1234', format: 'image/png', attribution: 'Kartendaten: © Nokia Here-maps'});
@@ -302,10 +309,10 @@
 		
 		var layerAdrMapbox = "https://{s}.tiles.mapbox.com/v3/examples.map-i86l3621/{z}/{x}/{y}.png";
 		var layerMapBox = new L.TileLayer(layerAdrMapbox,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
-		var layerAdrMapboxNatEarth ="https://{s}.tiles.mapbox.com/v3/mapbox.natural-earth-2/{z}/{x}/{y}.png"
-		var layerMapBoxNatEarth = new L.TileLayer(layerAdrMapboxNatEarth,{maxZoom: 6,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+		//var layerAdrMapboxNatEarth ="https://{s}.tiles.mapbox.com/v3/mapbox.natural-earth-2/{z}/{x}/{y}.png"
+		//var layerMapBoxNatEarth = new L.TileLayer(layerAdrMapboxNatEarth,{maxZoom: 6,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 		//var layerCloudmade = new L.TileLayer("http://tile.cloudmade.com/8bafab36916b5ce6b4395ede3cb9ddea/1/256/{z}/{x}/{y}",{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © Cloudmade'});
-		
+
 		//lokale tiles
 		//var layerOsmLocal = new L.TileLayer("../tiles/{z}/{x}/{y}.png",
 		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
@@ -348,17 +355,17 @@
 				layers    : {
 					"Apple Standard": layerAppleStd,
 					"Nokia Here-maps": layerNokia,
+					"Bing Standard":  bing_road,
+					"Google Standard": g_roadmap,
 					"Tomtom Standard": layerTomtom,
 					"Esri Street Map": layerEsriStreet,
 					"Basemap.at": layerBasem,
-					"Google Standard": g_roadmap,
 				}
 			},
 			{groupName : "Topographische",
 				expanded : false,
 				layers    : {
 					"OpenTopoMap": layerTopo,
-					"Mapbox Natural Earth": layerMapBoxNatEarth,
 					"Geofabrik Topo": layerGeofTopo,
 					"OpenStreetMap Landscape": layerOSMLands,
 					"AMap (Bergfex)": layerBergfexAmapGrp,
@@ -382,20 +389,16 @@
 					"Apple Satellit": layerAppleSat,
 					"Nokia Here-maps Satellit": layerNokiaSat,
 					"Nokia Here-maps Hybrid": layerNokiaHybrid,
-					"Mapquest Satellit": layerMapquestSat,
-					"Esri Satellit": layerEsriWldImg,
+					"Bing Satellit":  bing_areal,
+					"Bing Hybrid":  bing_areal_label,
+//					"Bing Vogelperspektive": bing_birdseye,
 					"Google Satellit":  g_satellite,
 					"Google Hybrid": g_hybrid,
+					"Mapquest Satellit": layerMapquestSat,
+					"Esri Satellit": layerEsriWldImg,
+					"Basemap Orthofoto": layerBasemOrtho,
 				}
-			}
-			//,
-			//{groupName : "Bing Karten",
-			//	expanded : true,
-			//	layers    : {
-			//		"Bing Standard"  :  bing2,
-			//		"Bing Satellit" :  bing1
-			//	}
-			//}
+			},
 		]
 		var overlayMaps = [
 			 {
@@ -403,17 +406,17 @@
 				expanded : true,
 				layers    : { 
 					"Mapquest Beschriftungen": layerOSMOvl,
+					"Mapsurfer Beschriftungen": layerMapSurferOvl,
 					"Apple Beschriftungen": layerAppleOverlay,
 					"Nokia Heremaps Beschriftungen":layerNokiaLabel,
-					//"Esri Boundaries": layerEsriBoundOvl,
-					//"Esri World Reference": layerEsriWldRefOvl,
 					"Basemap.at Beschriftungen": layerBasemOvl,
-					"Mapsurfer Overlay": layerMapSurferOvl,
 					"Mapsurfer Admin": layerMapSurferAdminOvl,
 					"Mapsurfer Hillshade": layerMapSurferHillOvl,
 					"OSM Terrain": layerOpPisteMapLandsh,
 					"OSM Schipisten": layerOpPisteMap,
-					"Gradnetz": grid
+					"Gradnetz": grid,
+					//"Esri Boundaries": layerEsriBoundOvl,
+					//"Esri World Reference": layerEsriWldRefOvl
 				}
 			}
 		]
@@ -479,6 +482,7 @@
 		});
 		
 		L.control.marker().addTo(map);
+		//map.addControl( new L.Control.Compass() );
 	</script>
 </body>
 </html>
