--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta charset="utf-8" />
-	<title>Andis Multimap Version 150924-1550</title>
+	<title>Andis Multimap Version 151021-1458</title>
 	<!-- style="-moz-user-select: none;" -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
@@ -28,8 +28,8 @@
 	<script src="lib/leaflet-search.js"></script>
 	<script src="lib/L.Grid.js"></script>
 	<script src="lib/L.Control.Marker.js"></script>
-	<script src="lib/Control.MiniMap.js" type="text/javascript"></script>
-    <script src="lib/L.Control.Zoomslider.js" ></script>
+	<script src="lib/Control.MiniMap.js"></script>
+    <script src="lib/L.Control.Zoomslider.js"></script>
 	<script src="lib/L.Control.Locate.js"></script>
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
@@ -65,7 +65,9 @@
 		var maxzoom_esri_sat=18;
 		var maxzoom_amap=13;
         var maxzoom_natgeo=12;
-		var minzoom_amap=8
+		var maxzoom_mapboxctry=7;
+		var minzoom_amap=8;
+		
 		var southWest = L.latLng(46.2520,8.7891),
 			northEast = L.latLng(49.2714,17.6660),
 			boundsAUT = L.latLngBounds(southWest, northEast);
@@ -323,11 +325,23 @@
 		//var layerAdrMapboxNatEarth ="https://{s}.tiles.mapbox.com/v3/mapbox.natural-earth-2/{z}/{x}/{y}.png"
 		//var layerMapBoxNatEarth = new L.TileLayer(layerAdrMapboxNatEarth,{maxZoom: 6,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 		//var layerCloudmade = new L.TileLayer("http://tile.cloudmade.com/8bafab36916b5ce6b4395ede3cb9ddea/1/256/{z}/{x}/{y}",{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © Cloudmade'});
+		var layerAdrMapboxTerr = "http://{s}.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IlpIdEpjOHcifQ.Cldl4wq_T5KOgxhLvbjE-w"
+		var layerMapBoxTerr = new L.TileLayer(layerAdrMapboxTerr,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 
+		//var layerAdrMapboxCtry="https://{s}.tiles.mapbox.com/v3/aj.1x1-degrees/{z}/{x}/{y}.png";
+		var layerAdrMapboxCtry="https://{s}.tiles.mapbox.com/v3/aj.geography-class-2/{z}/{x}/{y}.png";
+		var layerMapBoxCtry = new L.TileLayer(layerAdrMapboxCtry,{maxZoom: maxzoom_mapboxctry,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+
+		var layerAdrMapboxSat = "https://{s}.tiles.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoidGF0aWFuYSIsImEiOiJrWW1MQlNzIn0.nvwe9ZuqxDWX25LR3t3CFw"
+		var layerMapBoxSat = new L.TileLayer(layerAdrMapboxSat,{maxZoom: maxzoom_g_sat,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+		var layerAdrMapboxHybr = "https://{s}.tiles.mapbox.com/v4/mapbox.streets-satellite/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoidGF0aWFuYSIsImEiOiJrWW1MQlNzIn0.nvwe9ZuqxDWX25LR3t3CFw"
+		var layerMapBoxHybr = new L.TileLayer(layerAdrMapboxHybr,{maxZoom: maxzoom_g_sat,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 
         var layerAdrNatGeoWorld = "http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile/{z}/{y}/{x}/";
         var layerNatGeoWorld = new L.TileLayer(layerAdrNatGeoWorld,{maxZoom: maxzoom_natgeo,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.nationalgeographic.com">Nationalgeographic</a>'});
 
+		//var layerAdrWikiMapia = "http://i{s}.wikimapia.org/?x={x}&y={y}&zoom={z}&type=map&lng=5"
+		//var layerWikiMapia = new L.TileLayer(layerAdrWikiMapia,{maxZoom: maxzoom_std,detectRetina: true, subdomains: '1234',attribution: 'Kartendaten: © <a href="http://www.wikimapia.com">Wikimapia</a>'});
 		//http://vmap0.tiles.osgeo.org/wms/vmap0?SERVICE=WMS&REQUEST=GetMap&VERSION=1.1.1&LAYERS=basic&STYLES=&FORMAT=image/jpeg&TRANSPARENT=false&HEIGHT=256&WIDTH=256&DETECTRETINA=true&SRS=EPSG:3857&BBOX=2504688.5428486555,6574807.4249777235,2817774.6107047372,6887893.4928338
 		//http://vmap0.tiles.osgeo.org/wms/vmap0?LAYERS=basic&SERVICE=WMS&VERSION=1.1.1&REQUEST=GetMap&STYLES=&FORMAT=image%2Fjpeg&SRS=EPSG%3A4326&BBOX=16.875,39.375,22.5,45&WIDTH=256&HEIGHT=256
 //		var layerOsGeoBasic = new L.TileLayer.WMS("http://vmap0.tiles.osgeo.org/wms/vmap0",
@@ -337,7 +351,20 @@
 //					transparent: false,
 //					attribution: 'Kartendaten: © <a href="http://osgeo.org">OSGeo</a>'});
 
+		//var layerOmniscale = new L.TileLayer.WMS("http://maps.omniscale.net/v2/mapsosc-b697cf5a/style.default/map",
+		// 		{maxZoom: maxzoom_std,layers: 'osm',format: 'image/png',transparent: false,attribution: 'Kartendaten: © <a href="http://omniscale.net">Omniscale</a>'});
+		var layerHarvWld = new L.TileLayer.WMS("http://worldmap.harvard.edu/geoserver/wms",
+				{maxZoom: maxzoom_std,layers: 'geonode:Digital_Chart_of_the_World',format: 'image/png',transparent: true,attribution: 'Kartendaten: © <a href="http://worldmap.harvard.edu">Harvard Worldmap</a>'});
 
+
+		//var layerAdrAtlasOnlinePhy = "http://www.weltatlas-online.de/landkarten/weltkarte3i/TileGroup0/{z}-{x}-{y}.jpg"
+		//var layerAtlasOnlinePhy = new L.TileLayer(layerAdrAtlasOnlinePhy,{maxZoom: maxzoom_std,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.weltatlas-online.de/">Weltatlas-Online</a>'});
+
+		//var layerAtlasOnlinePol = L.tileLayer.zoomify('http://www.weltatlas-online.de/landkarten/politische_landkarte_der_welt_oktober2013/', {
+        //     width: 11659, height: 6370, tolerance: 0.8, units: 'pixels', attribution: 'Photo: Weltatlas-Online' });
+
+		//var layerAdrAtlasOnlinePol = "http://www.weltatlas-online.de/landkarten/politische_landkarte_der_welt_oktober2013/TileGroup0/{z}-{x}-{y}.jpg"
+		//var layerAtlasOnlinePol = new L.TileLayer(layerAdrAtlasOnlinePol,{maxZoom: maxzoom_std,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.weltatlas-online.de/">Weltatlas-Online</a>'});
 //        var layerYandex = new L.TileLayer("http://vec0{s}.maps.yandex.net/tiles?l=map&v=2.26.0&x={x}&y={y}&z={z}&lang=en-US",
 //                {maxZoom: maxzoom_esri_sat,detectRetina: true, subdomains: '1234', attribution: 'Kartendaten: © Yandex'});
 
@@ -374,6 +401,8 @@
 					"Mapsurfer": layerMapSurfer,
 					"Mapquest Open": layerMapquest,
 					"Mapbox": layerMapBox,
+					//"Omniscale": layerOmniscale,
+					//"Wikimapia": layerWikiMapia,
 					"OpenStreetBrowser": layerOpenStreetBrowser,
 					"OpenStreetMap Lyrk Geodienste": layerOSMLyrk,
 					"OpenStreetMap Deutschland": layerOSMStdDe,
@@ -391,6 +420,7 @@
 			{groupName : "Standard Karten",
 				expanded : false,
 				layers    : {
+					"Basemap.at": layerBasem,
 					"Apple Standard": layerAppleStd,
 					"Nokia Here-maps": layerNokiaRoad,
 					"Bing Standard":  bing_road,
@@ -398,7 +428,9 @@
 					"Tomtom Standard": layerTomtom,
 					"Esri Street Map": layerEsriStreet,
 					"National Geographic Countries": layerNatGeoWorld,
-					"Basemap.at": layerBasem,
+					"Mapbox Political":layerMapBoxCtry,
+					//"Weltatlas-Online Politisch": layerAtlasOnlinePol,
+					//"Weltatlas-Online Physisch": layerAtlasOnlinePhy,
 				}
 			},
 			{groupName : "Topographische",
@@ -407,6 +439,7 @@
 					"OpenTopoMap": layerOpenTopo,
 					"Geofabrik Topo": layerGeofTopo,
 					"OpenStreetMap Landscape": layerOSMLands,
+					"Mapbox Terrain": layerMapBoxTerr,
 					"AMap (Bergfex)": layerBergfexAmapGrp,
 					"Esri Topo Map": layerEsriTopo,
 					"Nokia Here-maps Terrain": layerNokiaTerr,
@@ -440,6 +473,8 @@
 					"Google Satellit":  g_satellite,
 					"Google Hybrid": g_hybrid,
 					"Mapquest Satellit": layerMapquestSat,
+					"Mapbox Satellit":layerMapBoxSat,
+					"Mapbox Hybrid":layerMapBoxHybr,
 					"Esri Satellit": layerEsriWldImg,
 					"Basemap Orthofoto": layerBasemOrtho,
 				}
@@ -456,6 +491,7 @@
 					"Nokia Heremaps Beschriftungen":layerNokiaLabel,
 					"Basemap.at Beschriftungen": layerBasemOvl,
 					"Mapsurfer Admin": layerMapSurferAdminOvl,
+					"Harvard International Borders":layerHarvWld,
 					"Mapsurfer Hillshade": layerMapSurferHillOvl,
 					"OSM Terrain": layerOpPisteMapLandsh,
 					"OSM Schipisten": layerOpPisteMap,
@@ -514,6 +550,9 @@
 		map.on('baselayerchange', function(e) {
 			if((e.name=="National Geographic Countries") && (map.getZoom()>maxzoom_natgeo)){
                 map.setZoom(maxzoom_natgeo);
+            }
+            else if((e.name=="Mapbox Political") && (map.getZoom()>maxzoom_mapboxctry)){
+                map.setZoom(maxzoom_mapboxctry);
             }
 			else if(((e.name=="OpenTopoMap")||(e.name=="Google Terrain"))&&(map.getZoom()>maxzoom_topo)) {
 				map.setZoom(maxzoom_topo);
