--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta charset="utf-8" />
-	<title>Andis Multimap Version 151021-1458</title>
+	<title>Andis Multimap (20151118-1340)</title>
 	<!-- style="-moz-user-select: none;" -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
@@ -16,14 +16,17 @@
 	-->
 	<link rel="stylesheet" href="./leaflet-0.7.3/leaflet.css" />
 	<script src="./leaflet-0.7.3/leaflet.js"></script>
-	<!-- Leaflet-Plugins -->
+	<!-- Leaflet-Plugins (styles) -->
 	<link rel="stylesheet" href="lib/styledLayerControl.css" />
 	<link rel="stylesheet" href="lib/leaflet-search.css" />
 	<link rel="stylesheet" href="lib/L.Grid.css" />
 	<link rel="stylesheet" href="lib/L.Control.Marker.css" />
 	<link rel="stylesheet" href="lib/Control.MiniMap.css" />
-    <link rel="stylesheet" href="lib/L.Control.Zoomslider.css" />
+  	<link rel="stylesheet" href="lib/L.Control.Zoomslider.css" />
 	<link rel="stylesheet" href="lib/L.Control.Locate.css" />
+	<link rel="stylesheet" href="leaflet.measure/leaflet.measure.css" />
+	<!-- Leaflet-Plugins (js) -->
+	<script src="lib/leaflet.measure.js"></script>
 	<script src="lib/styledLayerControl.js"></script>
 	<script src="lib/leaflet-search.js"></script>
 	<script src="lib/L.Grid.js"></script>
@@ -35,8 +38,7 @@
 	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 	<script src="lib/layer/tile/Bing.js"></script>
-	<!--
-    <script src="lib/layer/vector/KML.js"></script>
+	<!-- old stuff
 	<script src="lib/TileLayer.Bing.js"></script>
 	<script src="lib/leaflet-compass.min.js"></script>
 	<link rel="stylesheet" href="lib/leaflet-compass.min.css" />
@@ -67,7 +69,9 @@
         var maxzoom_natgeo=12;
 		var maxzoom_mapboxctry=7;
 		var minzoom_amap=8;
-		
+		var maxzoom_6=6;
+		var maxzoom_5=5;
+
 		var southWest = L.latLng(46.2520,8.7891),
 			northEast = L.latLng(49.2714,17.6660),
 			boundsAUT = L.latLngBounds(southWest, northEast);
@@ -184,6 +188,10 @@
 		// create osm outdoors layer
 		var layerAdrOSMOutd="http://{s}.tile.thunderforest.com/outdoors/{z}/{x}/{y}.png"
 		var layerOSMOutd = new L.TileLayer(layerAdrOSMOutd,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: Maps © <a href="http://www.thunderforest.com">Thunderforest</a>, Data © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>'});
+		// create osm transport layer
+		var layerAdrOSMTransp="http://{s}.tile.thunderforest.com/transport/{z}/{x}/{y}.png"
+		var layerOSMTransp = new L.TileLayer(layerAdrOSMTransp,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: Maps © <a href="http://www.thunderforest.com">Thunderforest</a>, Data © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>'});
+
 		// create osm standard layer
 		var layerAdrOSMStd = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
 		layerOSMStd = new L.TileLayer(layerAdrOSMStd,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a>'});
@@ -328,6 +336,7 @@
 		var layerAdrMapboxTerr = "http://{s}.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IlpIdEpjOHcifQ.Cldl4wq_T5KOgxhLvbjE-w"
 		var layerMapBoxTerr = new L.TileLayer(layerAdrMapboxTerr,{maxZoom: maxzoom_osm,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 
+		//Map-Box
 		//var layerAdrMapboxCtry="https://{s}.tiles.mapbox.com/v3/aj.1x1-degrees/{z}/{x}/{y}.png";
 		var layerAdrMapboxCtry="https://{s}.tiles.mapbox.com/v3/aj.geography-class-2/{z}/{x}/{y}.png";
 		var layerMapBoxCtry = new L.TileLayer(layerAdrMapboxCtry,{maxZoom: maxzoom_mapboxctry,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
@@ -336,7 +345,10 @@
 		var layerMapBoxSat = new L.TileLayer(layerAdrMapboxSat,{maxZoom: maxzoom_g_sat,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
 		var layerAdrMapboxHybr = "https://{s}.tiles.mapbox.com/v4/mapbox.streets-satellite/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoidGF0aWFuYSIsImEiOiJrWW1MQlNzIn0.nvwe9ZuqxDWX25LR3t3CFw"
 		var layerMapBoxHybr = new L.TileLayer(layerAdrMapboxHybr,{maxZoom: maxzoom_g_sat,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
-
+		var layerMapBoxPirate = new L.TileLayer("https://{s}.tiles.mapbox.com/v3/aj.Sketchy2/{z}/{x}/{y}.png",{maxZoom: maxzoom_6,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+		var layerMapBoxBlm8bit = new L.TileLayer("https://{s}.tiles.mapbox.com/v3/colemanm.blue-marble-8bit/{z}/{x}/{y}.png",{maxZoom: maxzoom_5,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+		var layerMapBoxPopFire = new L.TileLayer("https://{s}.tiles.mapbox.com/v3/aj.population-fire/{z}/{x}/{y}.png",{maxZoom: maxzoom_6,detectRetina: true, attribution: 'Kartendaten: © <a href="http://mapbox.com/">Mapbox</a>'});
+		
         var layerAdrNatGeoWorld = "http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile/{z}/{y}/{x}/";
         var layerNatGeoWorld = new L.TileLayer(layerAdrNatGeoWorld,{maxZoom: maxzoom_natgeo,detectRetina: true, attribution: 'Kartendaten: © <a href="http://www.nationalgeographic.com">Nationalgeographic</a>'});
 
@@ -400,13 +412,13 @@
 				layers    : {
 					"Mapsurfer": layerMapSurfer,
 					"Mapquest Open": layerMapquest,
-					"Mapbox": layerMapBox,
-					//"Omniscale": layerOmniscale,
-					//"Wikimapia": layerWikiMapia,
-					"OpenStreetBrowser": layerOpenStreetBrowser,
+					"OpenStreetMap Standard": layerOSMStd,
+					"Mapbox Standard": layerMapBox,
 					"OpenStreetMap Lyrk Geodienste": layerOSMLyrk,
 					"OpenStreetMap Deutschland": layerOSMStdDe,
-					"OpenStreetMap Standard": layerOSMStd,
+					"OpenStreetBrowser": layerOpenStreetBrowser,
+					//"Omniscale": layerOmniscale,
+					//"Wikimapia": layerWikiMapia,
 				}
 			},
 			//{groupName : "OSM Local",
@@ -420,7 +432,7 @@
 			{groupName : "Standard Karten",
 				expanded : false,
 				layers    : {
-					"Basemap.at": layerBasem,
+					"Basemap AT": layerBasem,
 					"Apple Standard": layerAppleStd,
 					"Nokia Here-maps": layerNokiaRoad,
 					"Bing Standard":  bing_road,
@@ -437,10 +449,11 @@
 				expanded : false,
 				layers    : {
 					"OpenTopoMap": layerOpenTopo,
+					"Mapbox Terrain": layerMapBoxTerr,
 					"Geofabrik Topo": layerGeofTopo,
 					"OpenStreetMap Landscape": layerOSMLands,
-					"Mapbox Terrain": layerMapBoxTerr,
-					"AMap (Bergfex)": layerBergfexAmapGrp,
+					"OpenStreetMap Outdoors": layerOSMOutd,
+					"AustriaMap (Bergfex)": layerBergfexAmapGrp,
 					"Esri Topo Map": layerEsriTopo,
 					"Nokia Here-maps Terrain": layerNokiaTerr,
 					"Google Terrain":  g_terrain,
@@ -450,13 +463,16 @@
 				expanded : false,
 				layers    : {
 					"Openstreetmap Humanitarian": layerHumanitarian,
-					"OpenStreetMap Outdoors": layerOSMOutd,
+					"Thunderforest Transport":layerOSMTransp,
+					"ÖPNV Verkehrskarte": layerÖPNV,
 					"OpenStreetMap Cycle": layerOSMCycle,
 					"Hike and Bike": layerHikeBike,
-					"ÖPNV Verkehrskarte": layerÖPNV,
-//					"GEBCO Ocean": layerGebco,
 					"Esri light gray": layerEsriGray,
 					"Stamen Watercolor": layerStamenWaterc,
+					"Mapbox Pirate Map": layerMapBoxPirate,
+					"Mapbox Bluemarbel 8 bit": layerMapBoxBlm8bit,
+					"Mapbox Populationfire": layerMapBoxPopFire,
+//					"GEBCO Ocean": layerGebco,
 //					"OSGeo Basic": layerOsGeoBasic,
 //                    "Yandex":layerYandex,
 				}
@@ -466,30 +482,39 @@
 				layers    : {
 					"Apple Satellit": layerAppleSat,
 					"Nokia Here-maps Satellit": layerNokiaSat,
-					"Nokia Here-maps Hybrid": layerNokiaHybrid,
 					"Bing Satellit":  bing_areal,
-					"Bing Hybrid":  bing_areal_label,
 //					"Bing Vogelperspektive": bing_birdseye,
 					"Google Satellit":  g_satellite,
-					"Google Hybrid": g_hybrid,
 					"Mapquest Satellit": layerMapquestSat,
 					"Mapbox Satellit":layerMapBoxSat,
-					"Mapbox Hybrid":layerMapBoxHybr,
 					"Esri Satellit": layerEsriWldImg,
 					"Basemap Orthofoto": layerBasemOrtho,
 				}
 			},
+			{groupName : "Satellit (Hybrid)",
+				expanded : false,
+				layers    : {
+					"Nokia Here-maps Hybrid": layerNokiaHybrid,
+					"Bing Hybrid":  bing_areal_label,
+					"Google Hybrid": g_hybrid,
+					"Mapbox Hybrid":layerMapBoxHybr,
+				}
+			}
 		]
 		var overlayMaps = [
-			 {
-				groupName : "Overlays",
-				expanded : true,
-				layers    : { 
-					"Mapquest Beschriftungen": layerOSMOvl,
-					"Mapsurfer Beschriftungen": layerMapSurferOvl,
-					"Apple Beschriftungen": layerAppleOverlay,
-					"Nokia Heremaps Beschriftungen":layerNokiaLabel,
-					"Basemap.at Beschriftungen": layerBasemOvl,
+			 {groupName : "Beschriftungen",
+					expanded : true,
+					layers    : {
+						"Mapquest Beschriftungen": layerOSMOvl,
+						"Mapsurfer Beschriftungen": layerMapSurferOvl,
+						"Apple Beschriftungen": layerAppleOverlay,
+						"Nokia Heremaps Beschriftungen":layerNokiaLabel,
+						"Basemap.at Beschriftungen": layerBasemOvl,
+					}
+			 },
+			{groupName : "Overlays (Diverse)",
+				expanded : false,
+				layers    : {
 					"Mapsurfer Admin": layerMapSurferAdminOvl,
 					"Harvard International Borders":layerHarvWld,
 					"Mapsurfer Hillshade": layerMapSurferHillOvl,
@@ -500,6 +525,7 @@
 					//"Esri World Reference": layerEsriWldRefOvl
 				}
 			}
+
 		]
 		var options = {
 				container_width 	: "220px",
@@ -508,7 +534,7 @@
 				exclusive       	: false
 		};
 
-		map = new L.Map('map');
+		map = new L.Map('map', {measureControl: true});
 		map.attributionControl.setPrefix(false);
 		map.dragging.enable();
 		map.touchZoom.enable();
@@ -554,6 +580,15 @@
             else if((e.name=="Mapbox Political") && (map.getZoom()>maxzoom_mapboxctry)){
                 map.setZoom(maxzoom_mapboxctry);
             }
+			else if((e.name=="Mapbox Pirate Map") && (map.getZoom()>maxzoom_6)){
+				map.setZoom(maxzoom_6);
+			}
+			else if((e.name=="Mapbox Bluemarbel 8 bit") && (map.getZoom()>maxzoom_5)){
+				map.setZoom(maxzoom_5);
+			}
+			else if((e.name=="Mapbox Populationfire") && (map.getZoom()>maxzoom_6)){
+				map.setZoom(maxzoom_6);
+			}
 			else if(((e.name=="OpenTopoMap")||(e.name=="Google Terrain"))&&(map.getZoom()>maxzoom_topo)) {
 				map.setZoom(maxzoom_topo);
 			}
